--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ authors = [
 license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = [
-]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+    [tool.poetry.dependencies]
+datasets = "^4.0.0"
