--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.15"
 
 
 [build-system]
@@ -15,3 +15,5 @@ requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
     [tool.poetry.dependencies]
 datasets = "^4.0.0"
+    sentence-transformers = "^5.1.0"
+    faiss-cpu = "^1.12.0"
