--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.11,<3.15"
+requires-python = ">=3.11,<3.14"
 
 
 [build-system]
@@ -17,3 +17,4 @@ build-backend = "poetry.core.masonry.api"
 datasets = "^4.0.0"
     sentence-transformers = "^5.1.0"
     faiss-cpu = "^1.12.0"
+    dspy = "^3.0.2"
