--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,5 @@ datasets = "^4.0.0"
     sentence-transformers = "^5.1.0"
     faiss-cpu = "^1.12.0"
     dspy = "^3.0.2"
+    fastapi = "^0.116.1"
+    uvicorn = "^0.35.0"
