--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,5 +20,7 @@ datasets = "^4.0.0"
     faiss-cpu = "^1.12.0"
     dspy = "^3.0.2"
     fastapi = {extras = ["standard"], version = "^0.116.1"}
+    trl = "^0.22.2"
+    peft = "^0.17.1"
 
 
